--- a/index.html
+++ b/index.html
@@ -6,5 +6,12 @@
   </head>
   <body>
     <h1>Odin Recipes</h1>
+    <ul>
+      <li>
+        <a href="recipes/salmon.html">Salmon</a>
+      </li>
+      <li><a href="recipes/korean-chicken.html">Korean Chicken</a></li>
+      <li><a href="recipes/potatoes.html">Breakfast Potatoes</a></li>
+    </ul>
   </body>
 </html>
