Added CSS to all pages

--- a/index.html
+++ b/index.html
@@ -2,16 +2,34 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="stylesheet" href="index.css" />
     <title>Recipes Project</title>
   </head>
   <body>
-    <h1>Odin Recipes</h1>
+    <h1
+      style="
+        text-align: center;
+        font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+      "
+    >
+      Odin Recipes
+    </h1>
     <ul>
-      <li>
+      <li
+        style="font-size: 24px; font-family: 'Courier New', Courier, monospace"
+      >
         <a href="recipes/salmon.html">Salmon</a>
       </li>
-      <li><a href="recipes/korean-chicken.html">Korean Chicken</a></li>
-      <li><a href="recipes/potatoes.html">Breakfast Potatoes</a></li>
+      <li
+        style="font-size: 24px; font-family: 'Courier New', Courier, monospace"
+      >
+        <a href="recipes/korean-chicken.html">Korean Chicken</a>
+      </li>
+      <li
+        style="font-size: 24px; font-family: 'Courier New', Courier, monospace"
+      >
+        <a href="recipes/potatoes.html">Breakfast Potatoes</a>
+      </li>
     </ul>
   </body>
 </html>
