--- a/recipes/korean-chicken.html
+++ b/recipes/korean-chicken.html
@@ -2,20 +2,30 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="stylesheet" href="korean-chicken.css" />
     <title>Korean Chicken Recipe</title>
   </head>
   <body>
-    <h1>Korean Chicken</h1>
-    <img src="../images/korean-chicken.jpeg" />
-    <p>
+    <h1
+      style="
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+        text-align: center;
+      "
+    >
+      Korean Chicken
+    </h1>
+    <div style="text-align: center">
+      <img class="chicken" src="../images/korean-chicken.jpeg" />
+    </div>
+    <p class="intro">
       Essential for bulking, chicken provides the body with a substantial amount
       of protein and comfort.
     </p>
-    <p>
+    <p class="intro">
       To avoid burnout while achieving your fitness goals, let's learn how to
       prepare a tasty, nutritious rendition on chicken: korean bbq chicken.
     </p>
-    <ul>
+    <ul class="ing">
       <h2>Ingredients:</h2>
       <h3>Sauce:</h3>
       <li><strong>1/4</strong> cup soy sauce <em>low sodium</em></li>
@@ -31,7 +41,7 @@
       <li><strong>1</strong> tablespoon sesame seeds</li>
       <li><strong>1</strong> tablespoon cilantro/parsley <em>chopped</em></li>
     </ul>
-    <ol>
+    <ol class="dir">
       <h2>Directions:</h2>
       <li>Preheat the oven to 375 F °.</li>
       <h4>Make the sauce:</h4>
