--- a/recipes/potatoes.html
+++ b/recipes/potatoes.html
@@ -2,16 +2,27 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="stylesheet" href="potatoes.css" />
     <title>Breakfast Potatoes Recipe</title>
   </head>
   <body>
-    <h1>Breakfast Potatoes</h1>
-    <img src="../images/potatoes.jpeg" />
-    <p>
+    <h1
+      style="
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+        text-align: center;
+      "
+    >
+      Breakfast Potatoes
+    </h1>
+    <div style="text-align: center">
+      <img class="potatoes" src="../images/potatoes.jpeg" />
+    </div>
+
+    <p class="intro">
       These baked breakfast potatoes are so easy and will become your go-to
       breakfast potatoes recipe for company and Sunday mornings!
     </p>
-    <ul>
+    <ul class="ing">
       <h2>Ingredients:</h2>
       <li><strong>2</strong> pounds yukon gold potatoes</li>
       <li><strong>1</strong> tsp. sea salt</li>
@@ -20,7 +31,7 @@
       <li><strong>3</strong> tbsp. extra light olive oil</li>
       <li><strong>1</strong> tbsp. parsley <em>finely chopped</em></li>
     </ul>
-    <ol>
+    <ol class="dir">
       <h2>Directions:</h2>
       <h4>
         Prep: Preheat oven to 400˚F. Line a large rimmed baking sheet (11x17)
