--- a/recipes/salmon.html
+++ b/recipes/salmon.html
@@ -2,20 +2,30 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="stylesheet" href="salmon.css" />
     <title>Salmon Recipe</title>
   </head>
   <body>
-    <h1>Salmon</h1>
-    <img src="../images/salmon.jpeg" />
-    <p>
-      Salmon is an incredibly nutritious food, serving as a great source of
-      healthy fats, protein, and micronutrients.
-    </p>
-    <p>
-      With this recipe we'll walk you through how to prepare a delicious honey
-      mustard glazed salmon sure to impress your family during the holidays!
-    </p>
-    <ul>
+    <h1
+      style="text-align: center; font-family: 'Courier New', Courier, monospace"
+    >
+      Salmon
+    </h1>
+    <div style="text-align: center">
+      <img class="salmon" src="../images/salmon.jpeg" />
+    </div>
+    <div class="intro">
+      <p>
+        Salmon is an incredibly nutritious food, serving as a great source of
+        healthy fats, protein, and micronutrients.
+      </p>
+      <p>
+        With this recipe we'll walk you through how to prepare a delicious honey
+        mustard glazed salmon sure to impress your family during the holidays!
+      </p>
+    </div>
+
+    <ul class="ing">
       <h2>Ingredients:</h2>
       <li><strong>1</strong> lemon <em>sliced</em></li>
       <li><strong>1</strong> three-pound salmon filet</li>
@@ -28,7 +38,7 @@
       <li><strong>1/2</strong> tsp red pepper flakes</li>
       <li>Fresh parsley <em>chopped</em></li>
     </ul>
-    <ol>
+    <ol class="dir">
       <h2>Directions:</h2>
       <li>
         Preheat oven to 400° and grease a 9”-x-13” baking dish with cooking
